<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="10dp"
                android:paddingTop="10dp">
                <TextView
                    android:id="@+id/sym_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sym_name"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="10dp"
                android:paddingTop="5dp">
                <TextView
                    android:id="@+id/exc_name"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/exc_name"/>
                <TextView
                    android:id="@+id/ltp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/ltp"
                    android:textColor="#AC1005"
                    android:layout_weight="1"
                    />
                <TextView
                    android:id="@+id/change_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/change_price"/>
                <TextView
                    android:id="@+id/change_per"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/change_per"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="20dp">
        <Button
            android:id="@+id/buy"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#070504"
            android:text="BUY"/>
        <Button
            android:layout_marginLeft="20dp"
            android:id="@+id/sell"
            android:layout_width="150dp"
            android:backgroundTint="#AC1005"
            android:layout_height="wrap_content"
            android:text="SELL"/>
    </LinearLayout>

</LinearLayout>